--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@ img {
 }
 
 header {
-    width: 100vw;
+    width: 100%;
     position: sticky;
     top: 0;
     background-color: black;
